Complete audited break glass access
